objects/tffa__BusinessCardDetail__c.object
<CustomObject>
    <description>Captures the corporate hierarchy for the structure or operational framework of the Corporate Card Account. Also captures the credit limit details at each level.</description>
    <fields>
        <fullName>tffa__AccountType__c</fullName>
        <description>Type of business card accounts as per the Companys internal structure and Management Information</description>
        <label>Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessCardAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application object.</description>
        <label>Application0</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Business Card Details</relationshipLabel>
        <relationshipName>BusinessCardDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CashLimit__c</fullName>
        <description>Requested Cash limit per card</description>
        <label>Cash limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique code as identified in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DailyCashLimit__c</fullName>
        <description>Requested daily cash limit per card</description>
        <label>Daily cash limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__HasCashAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the card has access to cash transactions using the business card</description>
        <label>Has cash access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsEmployeeDetailsCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the employee details are captured for the current business card hierarchy</description>
        <label>Is employee details captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsForeignTransactionAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the foreign transactions are allowed on the card</description>
        <label>Is foreign transaction allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLimitCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the limit details are captured for the current business card hierarchy</description>
        <label>Is limit captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LevelCode__c</fullName>
        <description>Unique code of the business hierarchy level as identified in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Level code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LevelName__c</fullName>
        <description>Name of the business card hierarchy level</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Level name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MasterLevelName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master level name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaxDailySpendLimit__c</fullName>
        <description>Requested max daily spend limit per card</description>
        <label>Max daily spend limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaxDelinquencyDuration__c</fullName>
        <description>Max delinquency duration in days</description>
        <label>Max delinquency duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxSpendLimit__c</fullName>
        <description>Max spend limit per card</description>
        <label>Max spend limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfCards__c</fullName>
        <description>Number of credit cards applied with the current business card level</description>
        <label>Number of cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ParentLevelName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent level name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent BusinessCardDetail object</description>
        <label>Parent</label>
        <referenceTo>tffa__BusinessCardDetail__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RestrictedMerchantCategorySet__c</fullName>
        <description>List of restricted merchant categories for the business credit card</description>
        <label>Restricted merchant category set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MerchantCategoryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__TotalCashLimit__c</fullName>
        <description>Sum of all the cash limits captured at business card level</description>
        <label>Total cash limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalDailyCashLimit__c</fullName>
        <description>Sum of daily cash limit captured at business card level</description>
        <label>Total daily cash limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalDelinquentLimit__c</fullName>
        <description>Sum of the limits allowed to max delinquency duration captured at business card level</description>
        <label>Total delinquent limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalSpendLimit__c</fullName>
        <description>Sum of spend limits captured at business card level</description>
        <label>Total spend limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Business Card Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Card Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>